# SDK

TA_CAN/C++/Linux/: CMakeLists.txt  test.cpp
TA_CAN/C++/Linux/include/: multi_motor_control.h
TA_CAN/C++/Linux/src/: motor_control.cpp  multi_motor_control.cpp
TA_CAN/C++/Windows/vs/project/: CMakeLists.txt  project.h  test.cpp
TA_CAN/C++/Windows/vs/project/include/: motor_control.h  multi_motor_control.h
TA_CAN/C++/Windows/vs/project/src/: motor_control.cpp  multi_motor_control.cpp
TA_CAN/C++/Windows/vs_code/: CMakeLists.txt  test.cpp
TA_CAN/C++/Windows/vs_code/include/: motor_control.h
TA_CAN/C++/Windows/vs_code/src/: motor_control.cpp
TA_CAN/python/: install.py  setup.cfg  setup.py
TA_CAN/python/src/motor_control/: __init__.py  constants.py  motor_control.py  motor_interface.py
TA_CAN/python/test/: demo.py  test.py
